--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img>
         <img>
       </div>
+      <canvas id="myChart" width="0" height="0"></canvas>
     </section>
     <div class="flex">
       <span class="show-results">
@@ -26,6 +27,7 @@
     </div>
   </main>
   <footer></footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
